security/auth0-authn.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "auth0"
  namespace: demo
spec:
  jwtRules:
    - issuer: "https://dev-t8zkz4b7.us.auth0.com/"
      jwksUri: "https://dev-t8zkz4b7.us.auth0.com/.well-known/jwks.json"
      forwardOriginalToken: true
