security/mods-access-reviews.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "mods-access-reviews"
  namespace: demo
spec:
  action: DENY
  selector:
    matchLabels:
      app: reviews
  rules:
  - when:
    - key: request.auth.claims[https://bookinfo.io/group]
      notValues: ["moderator"]
