security/policy-allow-to-productpage.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "allow-any-request-to-pp"
  namespace: demo
spec:
  selector:
    matchLabels:
      app: productpage
  action: ALLOW
  rules: 
  - {}
