security/policy-require-jwt.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "allow-requests-with-jwt"
  namespace: demo
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
